tests/errors/lexer/exponent_has_no_digits/nothing_after_exp.c
// Exponent has no digits
void main() 
{
	5e
	;
}
